--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^14.1.3",
     "babel-plugin-styled-components": "^1.13.1",
     "gatsby": "^3.9.1",
     "gatsby-image": "^2.4.20",
