--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "gatsby-source-contentful": "^5.9.0",
     "gatsby-source-filesystem": "^2.3.31",
     "gatsby-transformer-remark": "^4.6.0",
+    "lottie-react": "^2.1.0",
+    "lottie-web": "^5.7.12",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
