--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "babel-plugin-styled-components": "^1.13.1",
     "gatsby": "^3.9.1",
     "gatsby-image": "^2.4.20",
+    "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-image": "^1.9.0",
     "gatsby-plugin-manifest": "^2.4.32",
     "gatsby-plugin-offline": "^3.2.29",
     "gatsby-plugin-react-helmet": "^3.3.12",
     "gatsby-plugin-sharp": "^3.9.0",
+    "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-plugin-styled-components": "^4.9.0",
     "gatsby-source-contentful": "^5.9.0",
     "gatsby-source-filesystem": "^2.3.31",
