--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "styled-components": "^6.0.0-rc.6"
   },
   "devDependencies": {
-    "prettier": "2.1.2"
+    "prettier": "2.1.2",
+    "type-fest": "2.20.1"
   },
   "keywords": [
     "gatsby"
