--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^14.1.3",
+    "@emotion/unitless": "^0.8.1",
     "babel-plugin-styled-components": "^1.13.1",
     "gatsby": "^3.9.1",
     "gatsby-image": "^2.4.20",
     "gatsby-plugin-anchor-links": "^1.2.1",
+    "gatsby-plugin-google-tagmanager": "^5.11.0",
     "gatsby-plugin-image": "^1.9.0",
     "gatsby-plugin-manifest": "^2.4.32",
     "gatsby-plugin-offline": "^3.2.29",
