--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby": "^3.9.1",
     "gatsby-image": "^2.4.20",
     "gatsby-plugin-anchor-links": "^1.2.1",
+    "gatsby-plugin-google-gtag": "^5.11.0",
     "gatsby-plugin-google-tagmanager": "^5.11.0",
     "gatsby-plugin-image": "^1.9.0",
     "gatsby-plugin-manifest": "^2.4.32",
