--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "react-player": "^2.12.0",
     "react-plyr": "^2.2.0",
     "react-slick": "^0.29.0",
+    "react-svg": "^16.1.19",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^6.0.0-rc.6"
+    "styled-components": "^6.0.0-rc.6",
+    "svg-url-loader": "^8.0.0"
   },
   "devDependencies": {
     "prettier": "2.1.2",
