--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "lottie-react": "^2.1.0",
     "lottie-web": "^5.7.12",
     "npm": "^9.7.2",
-    "plyr": "^3.7.8",
-    "plyr-react": "^5.3.0",
+    "plyr": "3.6.7",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-carousel": "^4.3.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-modal": "^3.16.1",
@@ -37,7 +37,7 @@
     "react-slick": "^0.29.0",
     "react-svg": "^16.1.19",
     "slick-carousel": "^1.8.1",
-    "styled-components": "5.3.0",
+    "styled-components": "^6.0.0-rc.6",
     "svg-url-loader": "^8.0.0"
   },
   "devDependencies": {
